# Cockpit-Assistant-Friday

./: CMakeLists.txt  README.md  requirements.txt
config/: config.yaml
cpp/bindings/: pybind_engine.cpp
cpp/include/: inference_engine.h  kv_cache.h  sampler.h  tokenizer.h
cpp/src/: inference_engine.cpp  kv_cache.cpp  main.cpp  sampler.cpp  tokenizer.cpp
python/: __init__.py  cockpit_assistant.py  demo_text.py  demo_voice.py  demo_web.py  function_registry.py  vehicle_controller.py  voice_interface.py
scripts/: download_model.sh  run.sh  setup_llama_cpp.sh
tests/: test_assistant.py  test_engine.cpp
